2012-06-06 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_menu.php
	 include/styles/pandora_minimal.css
	 operation/extensions.php
	 operation/menu.php
	 general/header.php
	 godmode/extensions.php
	 godmode/menu.php: Invalid menu entries hided in metaconsola and 
	 added image in header. Also added info_box css attributes in
	 pandora_minimal css file.

2012-06-06  Ramon Novoa  <rnovoa@artica.es>

	* include/db/postgresql.php,
	  include/db/mysql.php,
	  include/db/oracle.php,
	  include/config_process.php,
	  include/functions_db.php,
	  operation/agentes/datos_agente.php: Fixed and improved the history
	  database feature.

2012-06-06  Vanessa Gil <vanessa.gil@artica.es>

	* operation/agentes/exportdata.php: Added help tip.

2012-06-06  Vanessa Gil <vanessa.gil@artica.es>

	* operation/agentes/exportdata.php: Fixed bug:
	If the data type of module is string, don't export the data in format: table, Excel or CSV.

2012-06-06 Dario Rodriguez <dario.rodriguez@artica.es>

        * include/functions_groups.php
        include/functions_agents.php
        operation/tree.php: Improved performance on tree view
        for groups.

2012-06-06 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
	
	* operation/agentes/ver_agente.php
	 pandora_console/godmode/alerts/alert_list.builder.php: Fixed alert
	 creation when metaconsole is activated.

2012-06-06  Vanessa Gil <vanessa.gil@artica.es>

	* operation/agentes/exportdata.php
	  operation/agentes/exportdata.csv.php
	  operation/agentes/exportdata.excel.php: Fixed bug export
	data: If you choose first the type of export, the chosen 
	agent modules are not loaded into the page.

2012-06-06  Hirofumi Kosaka  <kosaka@rworks.jp>

	* godmode/agentes/planned_downtime.php: merged from trunk.
	fixed that 'Affect' column at 'planned downtime' might show
	bad values. cleaned source code style.

2012-06-05  Vanessa Gil <vanessa.gil@artica.es>

	* include/functions_modules.php: Fixed bug: When you