@@ -841,8 +841,6 @@ function groups_create_group($group_name, $rest_values){
 // Get unknown agents by using the status code in modules.
 
 function groups_agent_unknown ($group_array) {
-
-	// If there are not groups to query, we jump to nextone
 	
 	if (empty ($group_array)) {
 		return 0;
@@ -861,8 +859,6 @@ function groups_agent_unknown ($group_array) {
 // Get ok agents by using the status code in modules.
 
 function groups_agent_ok ($group_array) {
-
-	// If there are not groups to query, we jump to nextone
 	
 	if (empty ($group_array)) {
 		return 0;
@@ -874,15 +870,20 @@ function groups_agent_ok ($group_array) {
 	$group_clause = implode (",", $group_array);
 	$group_clause = "(" . $group_clause . ")";
 	
-	return db_get_sql ("SELECT COUNT( DISTINCT tagente_estado.id_agente) FROM tagente_estado, tagente, tagente_modulo WHERE tagente.disabled = 0 AND tagente_estado.utimestamp != 0 AND tagente_modulo.id_agente_modulo = tagente_estado.id_agente_modulo AND tagente_modulo.disabled = 0 AND estado = 0 AND tagente_estado.id_agente = tagente.id_agente AND tagente.id_grupo IN $group_clause");
+	//!!!Query explanation!!!
+	//An agent is OK if all its modules are OK
+	//The status values are: 0 OK; 1 Critical; 2 Warning; 3 Unkown
+	//This query grouped all modules by agents and select the MAX value for status which has the value 0 
+	//If MAX(estado) is 0 it means all modules has status 0 => OK
+	//Then we count the agents of the group selected to know how many agents are in OK status
+	
+	return db_get_sql ("SELECT COUNT(max_estado) FROM (SELECT MAX(tagente_estado.estado) as max_estado FROM tagente_estado, tagente, tagente_modulo WHERE tagente.disabled = 0 AND tagente_estado.utimestamp != 0 AND tagente_modulo.id_agente_modulo = tagente_estado.id_agente_modulo AND tagente_modulo.disabled = 0 AND tagente_estado.id_agente = tagente.id_agente AND tagente.id_grupo IN $group_clause GROUP BY tagente.id_agente HAVING max_estado = 0) AS S1");
 	
 }
 
 // Get critical agents by using the status code in modules.
 
 function groups_agent_critical ($group_array) {
-
-	// If there are not groups to query, we jump to nextone
 	
 	if (empty ($group_array)) {
 		return 0;
@@ -893,6 +894,12 @@ function groups_agent_critical ($group_array) {
 			
 	$group_clause = implode (",", $group_array);
 	$group_clause = "(" . $group_clause . ")";
+	
+	//!!!Query explanation!!!
+	//An agent is Warning when has at least one module in warning status and nothing more in critical status
+	//The status values are: 0 OK; 1 Critical; 2 Warning; 3 Unkown
+	//If estado = 1 it means at leas 1 module is in critical status so the agent is critical
+	//Then we count the agents of the group selected to know how many agents are in critical status	
 	
 	return db_get_sql ("SELECT COUNT( DISTINCT tagente_estado.id_agente) FROM tagente_estado, tagente, tagente_modulo WHERE tagente.disabled = 0 AND tagente_estado.utimestamp != 0 AND tagente_modulo.id_agente_modulo = tagente_estado.id_agente_modulo AND tagente_modulo.disabled = 0 AND estado = 1 AND tagente_estado.id_agente = tagente.id_agente AND tagente.id_grupo IN $group_clause");
 	
@@ -902,8 +909,6 @@ function groups_agent_critical ($group_array) {
 
 function groups_agent_warning ($group_array) {
 
-	// If there are not groups to query, we jump to nextone
-	
 	if (empty ($group_array)) {
 		return 0;
 		
@@ -914,7 +919,14 @@ function groups_agent_warning ($group_array) {
 	$group_clause = implode (",", $group_array);
 	$group_clause = "(" . $group_clause . ")";
 	
-	return db_get_sql ("SELECT COUNT( DISTINCT tagente_estado.id_agente) FROM tagente_estado, tagente, tagente_modulo WHERE tagente.disabled = 0 AND tagente_estado.utimestamp != 0 AND tagente_modulo.id_agente_modulo = tagente_estado.id_agente_modulo AND tagente_modulo.disabled = 0 AND estado = 2 AND tagente_estado.id_agente = tagente.id_agente AND tagente.id_grupo IN $group_clause");
+	//!!!Query explanation!!!
+	//An agent is Warning when has at least one module in warning status and nothing more in critical status
+	//The status values are: 0 OK; 1 Critical; 2 Warning; 3 Unkown
+	//This query grouped all modules by agents and select the MIN value for status which has the value 0 
+	//If MIN(estado) is 2 it means at least one module is warning and there is no critical modules
+	//Then we count the agents of the group selected to know how many agents are in warning status
+	
+	return db_get_sql ("SELECT COUNT(min_estado) FROM (SELECT MIN(tagente_estado.estado) as min_estado FROM tagente_estado, tagente, tagente_modulo WHERE tagente.disabled = 0 AND tagente_estado.utimestamp != 0 AND tagente_modulo.id_agente_modulo = tagente_estado.id_agente_modulo AND tagente_modulo.disabled = 0 AND tagente_estado.id_agente = tagente.id_agente AND tagente.id_grupo IN $group_clause GROUP BY tagente.id_agente HAVING min_estado = 2) AS S1");
 	
 }
 
