@@ -1,3 +1,9 @@
+2012-06-07 Dario Rodriguez <dario.rodriguez@artica.es>
+
+	* include/functions_groups.php
+	operation/tree.php: Fixed and improved performance for
+	group tree view.
+
 2012-06-06 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
 
 	* include/functions_menu.php
